# netbox-phonebox

./: MANIFEST.in  README.md  pyproject.toml  setup.py
netbox_phonebox/: __init__.py  ami_listener.py  asterisk_ami.py  filtersets.py  forms.py  grandstream_ami.py  models.py  navigation.py  pbx_utils.py  search.py  tables.py  template_content.py  urls.py  views.py
netbox_phonebox/api/: serializers.py  urls.py  views.py
netbox_phonebox/management/commands/: migrate_secrets.py  start_ami_listeners.py
netbox_phonebox/migrations/: 0001_initial.py  0002_add_normalization.py  0002_add_secret_fields.py  0002_phase2_pbx_integration.py  0003_add_grandstream_ucm.py  0003_add_secrets_integration.py  0003_remove_secret_fields.py  0004_make_secrets_nullable.py
netbox_phonebox/static/netbox_phonebox/js/: phonebox_secrets.js
netbox_phonebox/templates/netbox_phonebox/: call_statistics.html  calllog.html  dashboard.html  extension.html  make_call.html  pbxserver.html  phonenumber.html  phonenumber_bulk_import.html  phonenumber_import.html  siptrunk.html  telephonyprovider.html
netbox_phonebox/templates/netbox_phonebox/inc/: contact_phone_numbers.html  device_phone_numbers.html  secrets_panel.html
phonebox_plugin/: forms.py  tables.py  template_content.py  urls.py  views.py
phonebox_plugin/migrations/: 0003_normalize_existing_numbers.py
phonebox_plugin/templates/netbox_phonebox/: dashboard.html  phonenumber.html  provider.html
phonebox_plugin/templates/netbox_phonebox/inc/: contact_phone_numbers.html
